force-app/main/default/objects/NCMT_TCO_HP_Parameters__c/NCMT_TCO_HP_Parameters__c.object-meta.xml
<CustomObject>
    <description>Object for storing the Housing Plan LOS parameters for TCO model</description>
    <label>TCO HP Parameter</label>
    <nameField>
        <displayFormat>HP-{000}</displayFormat>
        <label>HP Parameter ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>TCO HP Parameter</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>