force-app/main/default/objects/NCMT_TCO_HP_Parameters__c/fields/AC_Min_Air_Change_Hr__c.field-meta.xml
<CustomField>
    <fullName>AC_Min_Air_Change_Hr__c</fullName>
    <label>AC Min Air Change/Hr</label>
    <precision>4</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>