force-app/main/default/objects/NCMT_TCO_HP_Parameters__c/fields/CFM_SF__c.field-meta.xml
<CustomField>
    <fullName>CFM_SF__c</fullName>
    <label>CFM/SF</label>
    <precision>4</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>