force-app/main/default/objects/NCMT_TCO_HP_Parameters__c/fields/Cleaning_Deep_sf_hr__c.field-meta.xml
<CustomField>
    <fullName>Cleaning_Deep_sf_hr__c</fullName>
    <label>Cleaning Deep (SF/Hr)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>