force-app/main/default/objects/NCMT_TCO_HP_Parameters__c/fields/Cleaning_Floors_sf_hr__c.field-meta.xml
<CustomField>
    <fullName>Cleaning_Floors_sf_hr__c</fullName>
    <label>Cleaning Floors (SF//Hr)</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>