force-app/main/default/objects/NCMT_TCO_HP_Parameters__c/fields/Equipment_Load__c.field-meta.xml
<CustomField>
    <fullName>Equipment_Load__c</fullName>
    <label>Equipment Load (W/SF)</label>
    <precision>4</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>