force-app/main/default/objects/NCMT_TCO_HP_Parameters__c/fields/GPD_Gallons_Person__c.field-meta.xml
<CustomField>
    <fullName>GPD_Gallons_Person__c</fullName>
    <label>Water (gpd/Person)</label>
    <precision>4</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>