force-app/main/default/objects/NCMT_TCO_HP_Parameters__c/fields/Land_Related__c.field-meta.xml
<CustomField>
    <fullName>Land_Related__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Land Related</label>
    <type>Checkbox</type>
</CustomField>