force-app/main/default/objects/NCMT_TCO_HP_Parameters__c/fields/Level_1_Floors_Days_Week__c.field-meta.xml
<CustomField>
    <fullName>Level_1_Floors_Days_Week__c</fullName>
    <label>Level 1 Floors Days/Week</label>
    <precision>5</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>