force-app/main/default/objects/NCMT_TCO_HP_Parameters__c/fields/Level_2_Deep_Days_Week__c.field-meta.xml
<CustomField>
    <fullName>Level_2_Deep_Days_Week__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Level 2 Deep Days/Week</label>
    <precision>5</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>