force-app/main/default/objects/NCMT_TCO_HP_Parameters__c/fields/Level_2_Total_Hours_kSF__c.field-meta.xml
<CustomField>
    <fullName>Level_2_Total_Hours_kSF__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Level 2 Total Hours/kSF</label>
    <precision>5</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>