force-app/main/default/objects/NCMT_TCO_HP_Parameters__c/fields/LPD_W_SF__c.field-meta.xml
<CustomField>
    <fullName>LPD_W_SF__c</fullName>
    <label>LPD (W/SF)</label>
    <precision>4</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>