force-app/main/default/objects/NCMT_TCO_HP_Parameters__c/fields/Maint_Hr_kSF__c.field-meta.xml
<CustomField>
    <fullName>Maint_Hr_kSF__c</fullName>
    <label>Maint Hr/kSF</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>