force-app/main/default/objects/NCMT_TCO_HP_Parameters__c/fields/Supplies_Unit_Cost__c.field-meta.xml
<CustomField>
    <fullName>Supplies_Unit_Cost__c</fullName>
    <label>Supplies Unit Rate</label>
    <precision>8</precision>
    <scale>3</scale>
    <type>Currency</type>
</CustomField>