force-app/main/default/objects/NCMT_TCO_HP_Parameters__c/fields/TI_Cost_Renov__c.field-meta.xml
<CustomField>
    <fullName>TI_Cost_Renov__c</fullName>
    <defaultValue>0</defaultValue>
    <label>TI Cost Renov</label>
    <precision>7</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>