force-app/main/default/objects/NCMT_TCO_HP_Parameters__c/fields/USF_Occupant__c.field-meta.xml
<CustomField>
    <fullName>USF_Occupant__c</fullName>
    <label>USF/Occupant</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>