force-app/main/default/objects/NCMT_TCO_HP_Parameters__c/fields/Weekly_Occ_1__c.field-meta.xml
<CustomField>
    <fullName>Weekly_Occ_1__c</fullName>
    <label>Weekly Occ - 1</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>