force-app/main/default/objects/NCMT_TCO_HP_Parameters__c/fields/Weekly_Open_3__c.field-meta.xml
<CustomField>
    <fullName>Weekly_Open_3__c</fullName>
    <label>Weekly Open - 3</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>