force-app/main/default/objects/NCMT_TCO_HP_Parameters__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Space_Type__c</columns>
    <columns>Fiscal_Year__c</columns>
    <columns>Cleaning_Deep_sf_hr__c</columns>
    <columns>Cleaning_Floors_sf_hr__c</columns>
    <columns>Cleaning_Light_SF_Hr__c</columns>
    <columns>Level_1_Deep_Days_Week__c</columns>
    <columns>Level_1_Floors_Days_Week__c</columns>
    <columns>Level_1_Light_Days_Week__c</columns>
    <columns>Level_1_Total_Hours_ksf__c</columns>
    <columns>Level_2_Deep_Days_Week__c</columns>
    <columns>Level_2_Floors_Days_Week__c</columns>
    <columns>Level_2_Light_Days_Week__c</columns>
    <columns>Level_2_Total_Hours_kSF__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>